<resources>
    <string name="app_name">Smart Advisor</string>
    <string name="template_text">Lorem Ipsum</string>

    <!--Fields String-->
    <!--Form Screen-->
    <string name="personal_information">Personal Information</string>
    <string name="financial_information">Financial Information</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="retirement_age">Retirement Age</string>
    <string name="expectancy">Life Expectancy</string>
    <string name="self_employed">Self-Employed</string>
    <string name="employed">Employed</string>
    <string name="singaporean">Singaporean</string>
    <string name="foreigner_or_pr">Foreigner/PR</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="variable_expenses">Variable Expenses</string>
    <string name="assets">Assets</string>
    <string name="forecast">Forecast</string>
    <string name="increment">Increment</string>
    <string name="inflation_rate">Inflation Rate</string>

    <!--Graph Screen-->
    <string name="expenses_graph">Expenses</string>
    <string name="assets_graph">Assets</string>

    <!--Summary Screen-->
    <!--Section Header-->
    <string name="financial_summary">Financial Summary</string>
    <string name="details_summary">Details Summary</string>
    <string name="cpf_contribution">CPF Contributions</string>
    <!--label-->
    <string name="total_shortfall">Total Shortfall</string>
    <string name="balance_left_at_retirement">Balance Left at Retirement</string>
    <string name="expenses_exceeded_income_age">Expenses exceeded Income Age</string>
    <string name="inital_assets">Initial Assets</string>
    <string name="shortfall_age">ShortFall Age</string>
    <string name="job_status">Job Status</string>
    <string name="citizenship_status">Citizenship Status</string>
    <string name="gross_monthly_income">Gross Monthly Income</string>
    <string name="cpf_special_account">Special Account</string>
    <string name="cpf_medisave_account">Medisave Account</string>

    <!--Create Event/Milestone Screen-->
    <string name="event_name">Event Name</string>
    <string name="milestone_name">Milestone Name</string>
    <string name="event_type">Event Type</string>
    <string name="milestone_type">Milestone Type</string>
    <string name="age_occurred">Age Occurred</string>
    <string name="event_description">Event Description(Optional)</string>
    <string name="milestone_description">Milestone Description(Optional)</string>
    <string name="one_time">One-Time</string>
    <string name="recurring">Recurring</string>
    <string name="amount">Amount</string>
    <string name="duration_in_year">Duration (in Year)</string>
    <string name="cost_per_year">Cost Per Year</string>
    <string name="event_empty_recycler">Tap on \'+\' to add Event</string>
    <string name="milestone_empty_recycler">Tap on \'+\' to add Milestone</string>
    <string name="plan_empty_recycler">Tap on \'+\' to add Plan</string>
    <string name="graph_empty_recycler">Apply Scenario for data to be shown</string>
    <string name="no_income_event">No Income during this period</string>

    <!--Create Plan Screen-->
    <string name="plan_name">Plan Name</string>
    <string name="plan_type">Plan Type</string>
    <string name="premium_start_age">Premium Start Age</string>
    <string name="premium_amount">Premium Amount</string>
    <string name="premium_duration">Premium Duration</string>
    <string name="payout_age">Payout Age</string>
    <string name="payout_amount">Payout Amount</string>
    <string name="payout_duration">Payout Duration</string>
    <string name="existing_plan">Existing Plan</string>
    <string name="non_existing_plan">Non-Existing Plan</string>

    <!--List Row-->
    <string name="right_nav_icon">Right Nav icon</string>
    <string name="summary_icon">Summary icon</string>
    <string name="duration">Duration</string>
    <string name="po_age_occurred">PO Age Occurred</string>
    <string name="po_amount">PO Amount</string>
    <string name="po_duration">PO Duration</string>

    <!--Export Header-->
    <string name="export_report_title">Analysis Report</string>
    <string name="export_plan_name">Plan Name</string>
    <string name="export_premium_start_end">Premium Start-End</string>
    <string name="export_premium_status">Premium Status</string>
    <string name="export_total_premium_payment">Total Premium Payment</string>
    <string name="export_payout_start_end">Payout Start-End</string>
    <string name="export_payout_status">Payout Status</string>
    <string name="export_total_payout">Total Payout</string>

    <!--Option Menu-->
    <string name="action_apply_scenarios">Apply Scenarios</string>
    <string name="action_export">Export</string>
    <string name="save">Save</string>

    <!--Export Alert Dialog's EditText-->
    <string name="alert_dialog_password">Please enter a password for PDF document</string>
    <string name="graph_age">age</string>
    <string name="graph_expenses">expenses</string>
    <string name="graph_covered_expenses">covered expenses</string>
    <string name="graph_uncovered_expenses">uncovered expenses</string>
    <string name="graph_assets">assets</string>

    <!--OTP Verification-->
    <string name="enter_otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="sms_otp">SMS OTP</string>
    <string name="sms_otp_description">Enter the 6-digit One-Time-Password (OTP)</string>
    <string name="sign_out">Sign Out</string>
    <string name="resend_otp">Resend OTP</string>

    <!--Login Activity-->
    <string name="welcome">Welcome to Smart Advisor. Please enter Password</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>

</resources>
