<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.OTPVerificationActivity">

    <TextView
        android:id="@+id/textView6"
        style="@style/export_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sms_otp_description"
        app:layout_constraintBottom_toTopOf="@+id/otp_input_layout"
        app:layout_constraintEnd_toEndOf="@id/textView5"
        app:layout_constraintStart_toStartOf="@id/textView5" />

    <TextView
        android:id="@+id/textView5"
        style="@style/export_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sms_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/otp_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/formColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number"
            android:hint="@string/enter_otp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/verify_button"
        style="@style/form_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/compute_button"
        android:text="@string/verify"
        app:layout_constraintEnd_toEndOf="@+id/otp_input_layout"
        app:layout_constraintStart_toStartOf="@+id/otp_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/otp_input_layout" />

</android.support.constraint.ConstraintLayout>