<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summary_detail_background"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/summary_toolbar_layout" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_input_layout"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:text="wang" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/age_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="@+id/name_input_layout"
            app:layout_constraintStart_toStartOf="@+id/name_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/name_input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:text="24" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/retirement_age_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="@+id/age_input_layout"
            app:layout_constraintStart_toStartOf="@+id/age_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/age_input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retirement_age"
                android:inputType="number"
                android:text="55" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/expectancy_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="@+id/retirement_age_input_layout"
            app:layout_constraintStart_toStartOf="@+id/retirement_age_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/retirement_age_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/expectancy_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expectancy"
                android:inputType="number"
                android:text="65" />
        </android.support.design.widget.TextInputLayout>

        <co.ceryle.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/employment_status_segmented_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="@+id/expectancy_input_layout"
            app:layout_constraintStart_toStartOf="@+id/expectancy_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/expectancy_input_layout"
            app:sbg_animateSelector="linearOutSlowIn"
            app:sbg_animateSelectorDuration="1000"
            app:sbg_backgroundColor="@color/white"
            app:sbg_borderColor="@color/form_color"
            app:sbg_borderSize="1dp"
            app:sbg_radius="2dp"
            app:sbg_selectorColor="@color/form_color">

            <co.ceryle.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:drawablePadding="4dp"
                app:sb_rippleColor="@color/colorPrimary"
                app:sb_text="@string/self_employed"
                app:sb_textColor="@color/form_color"
                app:sb_textColor_onSelection="@color/white" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                app:sb_rippleColor="@color/colorPrimary"
                app:sb_text="@string/employed"
                app:sb_textColor="@color/form_color"
                app:sb_textColor_onSelection="@color/white"/>

        </co.ceryle.segmentedbutton.SegmentedButtonGroup>

        <co.ceryle.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/citizenship_segmented_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="@+id/employment_status_segmented_button"
            app:layout_constraintStart_toStartOf="@+id/employment_status_segmented_button"
            app:layout_constraintTop_toBottomOf="@+id/employment_status_segmented_button"
            app:sbg_animateSelector="linearOutSlowIn"
            app:sbg_animateSelectorDuration="1000"
            app:sbg_backgroundColor="@color/white"
            app:sbg_borderColor="@color/form_color"
            app:sbg_borderSize="1dp"
            app:sbg_radius="2dp"
            app:sbg_selectorColor="@color/form_color">

            <co.ceryle.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:drawablePadding="4dp"
                app:sb_rippleColor="@color/colorPrimary"
                app:sb_text="@string/singaporean"
                app:sb_textColor="@color/form_color"
                app:sb_textColor_onSelection="@color/white" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                app:sb_rippleColor="@color/colorPrimary"
                app:sb_text="@string/foreigner_or_pr"
                app:sb_textColor="@color/form_color"
                app:sb_textColor_onSelection="@color/white"/>

        </co.ceryle.segmentedbutton.SegmentedButtonGroup>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
