<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/form_layout_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/create_plan_toolbar"
            layout="@layout/toolbar_layout_blue" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_plan_toolbar">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plan_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/plan_type_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plan_type"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:textIsSelectable="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/showDialogButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/plan_type_input_layout"
            app:layout_constraintEnd_toEndOf="@+id/plan_type_input_layout"
            app:layout_constraintStart_toStartOf="@+id/plan_type_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/name_input_layout" />

        <co.ceryle.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/payment_type_segmented_button"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="@+id/plan_type_input_layout"
            app:layout_constraintStart_toStartOf="@+id/plan_type_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/plan_type_input_layout"
            app:sbg_animateSelector="linearOutSlowIn"
            app:sbg_animateSelectorDuration="1000"
            app:sbg_backgroundColor="@color/white"
            app:sbg_borderColor="@color/form_color"
            app:sbg_borderSize="1dp"
            app:sbg_radius="2dp"
            app:sbg_selectorColor="@color/form_color">

            <co.ceryle.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                app:sb_rippleColor="@color/colorPrimary"
                app:sb_text="@string/one_time"
                app:sb_textColor="@color/form_color"
                app:sb_textColor_onSelection="@color/white" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                app:sb_rippleColor="@color/colorPrimary"
                app:sb_text="@string/recurring"
                app:sb_textColor="@color/form_color"
                app:sb_textColor_onSelection="@color/white" />

        </co.ceryle.segmentedbutton.SegmentedButtonGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/premium_start_age_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_type_segmented_button">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/premium_start_age"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/payment_amount_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/premium_start_age_input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_amount"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/plan_duration_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_amount_input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plan_duration"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/payout_age_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plan_duration_input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payout_age"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/payout_amount_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payout_age_input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payout_amount"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/payout_duration_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/form_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payout_amount_input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payout_duration"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <co.ceryle.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/plan_status_segmented_button"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/payout_duration_input_layout"
            app:layout_constraintStart_toStartOf="@+id/payout_duration_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/payout_duration_input_layout"
            app:layout_constraintVertical_bias="0.0"
            app:sbg_animateSelector="linearOutSlowIn"
            app:sbg_animateSelectorDuration="1000"
            app:sbg_backgroundColor="@color/white"
            app:sbg_borderColor="@color/form_color"
            app:sbg_borderSize="1dp"
            app:sbg_radius="2dp"
            app:sbg_selectorColor="@color/form_color">

            <co.ceryle.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                app:sb_rippleColor="@color/colorPrimary"
                app:sb_text="@string/existing_plan"
                app:sb_textColor="@color/form_color"
                app:sb_textColor_onSelection="@color/white" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                app:sb_rippleColor="@color/colorPrimary"
                app:sb_text="@string/non_existing_plan"
                app:sb_textColor="@color/form_color"
                app:sb_textColor_onSelection="@color/white" />

        </co.ceryle.segmentedbutton.SegmentedButtonGroup>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>